fix: stop content overflowing screen on mobile

--- a/src/components/common/ChainIndicator/styles.module.css
+++ b/src/components/common/ChainIndicator/styles.module.css
@@ -28,4 +28,7 @@
   .responsive .name {
     display: none;
   }
+.indicator {
+  min-width: 35px;
+}
 }
